Offline Actions Design Alignments | Offline API Typing Fixes (#195)
* Design alignments: Modal, empty states, not-yet-implemented features.

* Remove unused import.

* Typing improvements.

* Created type for process function.

--- a/packages/apps/esm-offline-tools-app/src/home/overview-cards-container.styles.scss
+++ b/packages/apps/esm-offline-tools-app/src/home/overview-cards-container.styles.scss
@@ -6,17 +6,9 @@
   grid-template-rows: 1fr 1fr;
   gap: $spacing-05;
   margin: 0 $spacing-05 $spacing-05 $spacing-05;
-
-  .offlineActionsCard {
-    grid-column: 1 / span 2;
-  }
 }
 
 :global(.omrs-breakpoint-gt-tablet) .overviewCardContainer {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
-
-  .offlineActionsCard {
-    grid-column: 3 / span 2;
-  }
 }
