--- a/packages/apps/esm-offline-tools-app/src/offline-actions/no-actions-empty-state.styles.scss
+++ b/packages/apps/esm-offline-tools-app/src/offline-actions/no-actions-empty-state.styles.scss
@@ -6,4 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .emptyStateDescription {
+    @include carbon--type-style("body-long-01");
+    white-space: pre-line;
+    text-align: center;
+  }
 }
